# rspc

./: .gitignore  .taplo.toml  CODE_OF_CONDUCT.md  Cargo.toml  DUMP  DUMP2  FUCK_OFF  README.md  TODO  biome.json  demo.bindings.ts  demo2.bindings.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.sh  tsconfig.base.json  tsconfig.json  turbo.json
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/examples/: basic.rs
core/src/: dyn_input.rs  dyn_output.rs  error.rs  interop.rs  lib.rs  procedure.rs  procedures.rs  state.rs  stream.rs
crates/axum/: Cargo.toml
crates/axum/src/: extractors.rs  httpz_extractors.rs  jsonrpc.rs  jsonrpc_exec.rs  legacy.rs  lib.rs  v2.rs
crates/binario/: Cargo.toml  README.md  client.ts
crates/binario/src/: lib.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: lib.rs  state.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/examples/: basic.rs
crates/core/src/: async_runtime.rs  dyn_input.rs  error.rs  executor.rs  internal.rs  layer.rs  lib.rs  procedure.rs  procedure_store.rs  router.rs  router_builder.rs  serializer.rs  stream.rs  task.rs  util.rs  value.rs
crates/core/tests/: basic.rs
crates/core2/: Cargo.toml  TODO
crates/core2/src/: executor.rs  format.rs  lib.rs  router.rs  serializer.rs  task.rs
crates/core2/tests/: basic.rs
crates/create-rspc-app/: .gitignore  Cargo.toml  build.rs
crates/create-rspc-app/src/: database.rs  errors.rs  utils.rs
crates/create-rspc-app/tests/: tests.rs
crates/devtools/: Cargo.toml  README.md
crates/devtools/src/: lib.rs  types.rs
crates/httpz/: Cargo.toml
crates/httpz/src/: extractors.rs  httpz_endpoint.rs  lib.rs  websocket.rs
crates/legacy/: Cargo.toml  README.md
crates/legacy/src/: error.rs  lib.rs  router.rs  router_builder.rs  selection.rs
crates/normi/: Cargo.toml  README.md
crates/normi/examples/: basic.rs
crates/normi/macros/: Cargo.toml  README.md
crates/normi/src/: lib.rs  normalise.rs  object.rs  rspc.rs  value.rs
crates/normi/tests/: macros.rs  object.rs
crates/openapi/: Cargo.toml  README.md
crates/openapi/src/: lib.rs  swagger.html
crates/rspc2/: Cargo.toml
crates/rspc2/examples/: basic.rs
crates/rspc2/src/: format.rs  lib.rs  procedure.rs  router.rs
crates/specta/: Cargo.toml  README.md  out.txt
crates/specta/examples/: basic.rs  command.rs  datatype.rs  function.rs  type.rs  type_as.rs
crates/specta/macros/: Cargo.toml
crates/specta/src/: datatype.rs  enum.rs  export.rs  impl_type_macros.rs  lib.rs  object.rs  to_data_type.rs  tuple.rs
crates/specta/tests/: bigints.rs  datatype.rs  duplicate_ty_name.rs  fail.rs  lib.rs  macro_decls.rs  swift.rs  ts.rs  ty_override.rs  typescript.rs
crates/tauri/: Cargo.toml
crates/tauri/src/: jsonrpc_exec.rs  lib.rs
crates/tracing/: Cargo.toml  README.md
crates/tracing/src/: lib.rs  traceable.rs
crates/validator/: Cargo.toml  README.md
crates/validator/src/: lib.rs
crates/zer/: Cargo.toml  README.md
crates/zer/src/: lib.rs
create-rspc-app/: Cargo.toml  README.md
create-rspc-app/src/: database.rs  errors.rs  extras.rs  framework.rs  frontend_framework.rs  generator.rs  internal.rs  lib.rs  main.rs  post_gen.rs  utils.rs
create-rspc-app/templates/axum_base/: Cargo.toml  Cargo__toml  README.md
create-rspc-app/templates/axum_pcr_base/: Cargo.toml
create-rspc-app/templates/base/: .gitignore
create-rspc-app/templates/pcr_base/: .gitignore
create-rspc-app/templates/react_base_axum/: package.json  vite.config.ts
create-rspc-app/templates/react_base_tauri/: package.json  vite.config.ts
create-rspc-app/templates/solid_base_axum/: package.json
create-rspc-app/templates/solid_base_tauri/: package.json
create-rspc-app/templates/tauri_base/: Cargo__toml
create-rspc-app/templates/tauri_pcr_base/: .env  Cargo.toml  Cargo__toml
create-rspc-app/tests/: tests.rs
examples/: Cargo.toml  axum.rs  basic.rs  basic2.rs  bindings.ts  bindings_t.d.ts  bindings_t.d.ts.map  cookies.rs  enum_key.rs  error_handling.rs  exotic_types.rs  full_type_safety.rs  global_context.rs  merge_routers.rs  middleware.rs  selection.rs  subscription.rs  subscriptions.rs  todo.rs  typescript_test.rs
examples/actix-web/: Cargo.toml
examples/actix-web/src/: main.rs
examples/anyhow/: Cargo.toml  bindings.ts
examples/anyhow-error/: Cargo.toml
examples/anyhow-error/src/: main.rs
examples/anyhow/src/: main.rs
examples/astro/: .gitignore  astro.config.mjs  package.json  tsconfig.json
examples/astro/.astro/: settings.json
examples/astro/test/: client.test.ts  index.md  (+2 more)
examples/axum/: Cargo.toml  package.json
examples/binario/: Cargo.toml  client.ts
examples/client/: Cargo.toml
examples/core/: Cargo.toml
examples/deno/: index.ts  package.json
examples/legacy/: Cargo.toml
examples/legacy-compat/: Cargo.toml
examples/nextjs/: README.md  package.json  tsconfig.json
examples/react/: index.html  index.tsx  package.json
examples/solid/: package.json
examples/src/: basic.rs  cookies.rs.dis  error_handling.rs  lib.rs  merging_routers.rs  selection.rs  subscriptions.rs
examples/tauri/: index.html  package.json  vite.config.ts
examples/utils/: user.rs
examples/vercel/: .gitignore  Cargo.toml  package.json  test.json  vercel.json
examples/web/: astro.config.mjs  package.json  tsconfig.json
macros/: Cargo.toml
macros/src/: lib.rs
rspc/: Cargo.toml
rspc/src/: as_date.rs  error.rs  extension.rs  format.rs  infallible.rs  internal.rs  interop.rs  languages.rs  legacy.rs  lib.rs  main.rs  middleware.rs  notes.rs  playground.rs  procedure.rs  procedure_kind.rs  router.rs  rspc.rs  runtime.rs  state.rs  stream.rs  types.rs  typescript.rs  util.rs
rspc/tests/: router.rs  typescript.rs
specta/: Cargo.toml  README.md  dbg.rs
specta/macros/: Cargo.toml  README.md
specta/src/: datatype.rs  enum.rs  generic.rs  impl_type_macros.rs  lib.rs  object.rs  tuple.rs  typedef.rs  typescript.rs
specta/tests/: dependencies.rs  lib.rs  typedef.rs  typescript.rs
(+774 files in other folders)
