[package]
name = "rspc"
description = "A blazing fast and easy to use TRPC server for Rust."
version = "0.3.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/LICENCE", "/README.md"]
repository = "https://github.com/specta-rs/rspc"
documentation = "https://docs.rs/rspc/latest/rspc"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
# Public
rspc-core = { path = "./crates/core" }
serde = { version = "1", features = ["derive"] } # TODO: Remove features
futures = "0.3"
specta = { version = "=2.0.0-rc.20", features = [
    "derive",
    "serde",
    "serde_json",
] } # TODO: Drop all features
specta-util = "0.0.7"

# Private
serde-value = "0.7"
erased-serde = "0.4"

# Temporary # TODO: Remove
specta-typescript = { version = "=0.0.7", features = [] }
serde_json = "1.0.133"                                              # TODO: Drop this
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
tracing = { version = "0.1.40", optional = true }
transient = "0.4.1"
better_any = "0.2.0"

# https://github.com/rust-lang/rust/issues/77125
typeid = "1.0.2"

[workspace]
members = ["./crates/*", "./examples", "./examples/axum", "crates/core"]
