[workspace]
resolver = "2"
members = [
	"./rspc",
	"./core",
	"./client",
	"./integrations/*",
	"./middleware/*",
	"./examples",
	"./examples/axum",
	"./examples/client",
	"./examples/tauri/src-tauri",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
panic_in_result_fn = { level = "warn", priority = -1 }

[patch.crates-io]
specta = { git = "https://github.com/specta-rs/specta", rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }
specta-serde = { git = "https://github.com/specta-rs/specta", rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }
specta-typescript = { git = "https://github.com/specta-rs/specta", rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }

# specta = { path = "/Users/oscar/Desktop/specta/specta" }
# specta-typescript = { path = "/Users/oscar/Desktop/specta/specta-typescript" }
# specta-serde = { path = "/Users/oscar/Desktop/specta/specta-serde" }
# specta-util = { path = "/Users/oscar/Desktop/specta/specta-util" }
