[workspace]
resolver = "2"
members = [
    "./crates/*",
	"./rspc",
	"./integrations/*",
	"./examples",
	"./examples/core",
	"./examples/axum",
	"./examples/actix-web",
	"./examples/client",
	"./examples/tauri/src-tauri",
]

[workspace.dependencies]
# Private
specta-typescript = { version = "0.0.7", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
erased-serde = { version = "0.4", default-features = false }

# Public
specta = { version = "=2.0.0-rc.20", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
panic_in_result_fn = { level = "warn", priority = -1 }

[patch.crates-io]
specta = { git = "https://github.com/specta-rs/specta", rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }
specta-serde = { git = "https://github.com/specta-rs/specta", rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }
specta-typescript = { git = "https://github.com/specta-rs/specta", rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }

# specta = { path = "/Users/oscar/Desktop/specta/specta" }
# specta-typescript = { path = "/Users/oscar/Desktop/specta/specta-typescript" }
# specta-serde = { path = "/Users/oscar/Desktop/specta/specta-serde" }
# specta-util = { path = "/Users/oscar/Desktop/specta/specta-util" }
