[package]
name = "create-rspc-app"
version = "0.0.1"
edition = "2021"

[dependencies]
include_dir = "0.7.2"
requestty = "0.5.0"
strum = { version = "0.24.1", features = ["derive"] }
rustc_version = "0.4.0"

[dev-dependencies]
tempdir = "0.3.7"
cargo = "0.65.0"
tokio = { version = "1.21.2", features = ["full", "process"] }
ssh2 = { version = "0.9.3", features = ["vendored-openssl"] } # This is need for M1 support
futures = "0.3.24"
