[package]
name = "create-rspc-app"
description = "Get started with your next rspc app!"
version = "0.0.2"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/LICENCE", "/README.md", "/templates"]
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/create-rspc-app"
keywords = ["rspc", "prisma-client-rust", "pcr", "tauri", "axum"]
categories = ["web-programming", "asynchronous"]

[dependencies]
include_dir = "0.7.3"
requestty = "0.5.0"
strum = { version = "0.24.1", features = ["derive"] }
rustc_version = "0.4.0"
ureq = { version = "2.6.2", features = ["json"] }
serde_json = "1.0.93"
ctrlc = "3.2.5"
thiserror = "1.0.38"
walkdir = "2"

[dev-dependencies]
tempdir = "0.3.7"
cargo = "0.67.1"
tokio = { version = "1.25.0", features = ["full", "process"] }
ssh2 = { version = "0.9.3", features = ["vendored-openssl"] } # This is need for M1 support
futures = "0.3.26"
