[package]
name = "create-rspc-app"
description = "Get started with your next rspc app!"
version = "0.0.3"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/LICENCE", "/README.md", "/templates"]
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/create-rspc-app"
keywords = ["rspc", "prisma-client-rust", "pcr", "tauri", "axum"]
categories = ["web-programming", "asynchronous"]

[dependencies]
include_dir = "0.7.3"
requestty = "0.5.0"
strum = { version = "0.25.0", features = ["derive"] }
rustc_version = "0.4.0"
ureq = { version = "2.7.1", features = ["json"] }
serde_json = "1.0.103"
ctrlc = "3.4.0"
thiserror = "1.0.43"
walkdir = "2"

[dev-dependencies]
tempfile = "3.6.0"
cargo = "0.71.0"
tokio = { version = "1.29.1", features = ["full", "process"] }
futures = "0.3.28"
