[package]
name = "example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rspc = { path = "../" }
specta = "1.0.5"
rspc-axum = { path = "../crates/axum" }
async-stream = "0.3.5"
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
], default-features = false }
tower-cookies = { version = "0.10.0", features = ["axum-core"] }
tower-http = { version = "0.5.2", default-features = false, features = [
    "cors",
] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.114"
