[package]
name = "example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rspc = { path = "../" }
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
rspc-axum = { path = "../integrations/axum" }
async-stream = "0.3.6"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
time = "0.3.36"
tokio = { version = "1.41.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
], default-features = false }
tower-cookies = { version = "0.10.0", features = ["axum-core"] }
tower-http = { version = "0.6.2", default-features = false, features = [
    "cors",
] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0.133"
