[package]
name = "trpc-rs-macros"
description = "Macros for `trpc-rs`. You don't need to import this directly!"
version = "0.0.2"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/trpc-rs"
documentation = "https://docs.rs/trpc-rs/latest/trpc_rs"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
darling = "0.14.1"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["parsing"] }
