[package]
name = "rspc-macros"
description = "Macros for `rspc`. You don't need to import this directly!"
version = "0.0.3"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/rspc/latest/rspc"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
darling = "0.14.1"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["parsing"] }
