[package]
name = "rspc"
description = "A blazing fast and easy to use TRPC server for Rust."
version = "0.3.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/LICENCE", "/README.md"]
repository = "https://github.com/specta-rs/rspc"
documentation = "https://docs.rs/rspc/latest/rspc"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

typescript = [] # TODO: "dep:specta-typescript"
rust = ["dep:specta-rust"]

# TODO: Remove these in future
unstable = []
nolegacy = []

[dependencies]
# Public
rspc-procedure = { path = "../crates/procedure" }
serde = "1"
futures = "0.3" # TODO: Drop down to `futures-core` when removing legacy stuff?
specta = { version = "=2.0.0-rc.20", features = [
    "serde",
    "serde_json",
    "derive", # TODO: remove this
] }

# Private
specta-typescript = { version = "=0.0.7", features = [] } # TODO: Make optional once legacy stuff is removed -  optional = true,
specta-rust = { git = "https://github.com/specta-rs/specta", optional = true, rev = "bf3a0937cceb29eca11df207076b9e1b942ba7bb" }

# Temporary # TODO: Remove
serde_json = "1.0.134"
thiserror = "2.0.9"

[lints]
workspace = true
