[package]
name = "specta"
description = "Easily export your Rust types to other languages"
version = "0.0.2"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/examples", "/LICENCE", "/README.md"]
repository = "https://github.com/oscartbeaumont/rspc/tree/main/specta"
documentation = "https://docs.rs/specta/latest/specta"

[features]
default = ["serde"]
serde = ["specta-macros/serde", "dep:serde_json"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
indexmap = ["dep:indexmap"]

[dependencies]
convert_case = "0.5.0"
specta-macros = { version = "0.0.2", path = "./macros" }
termcolor = "1.1.3"
serde_json = { version = "1.0.81", optional = true }
uuid = { version = "1.1.2", optional = true }
chrono = { version = "0.4.19", optional = true }
indexmap = { version = "1.9.1", optional = true }

[dev-dependencies]
serde = { version = "1.0.140", features = ["derive"] }
