[package]
name = "rspc-axum"
description = "Axum adapter for rspc"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/rspc-axum/latest/rspc-axum"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
ws = ["dep:tokio", "axum/ws"]

[dependencies]
rspc = { version = "0.1.4", path = "../.." }
axum = "0.7.4"
serde_json = "1.0.114"

# TODO: Drop these
form_urlencoded = "1.2.1"                       # TODO: use Axum's built in extractor
futures = "0.3.30"                              # TODO: No blocking execution, etc
tokio = { version = "1.36.0", optional = true } # TODO: No more `tokio::select` + spawning threads. Axum's Websocket upgrade handles that.
