[package]
name = "rspc-axum"
description = "Axum adapter for rspc"
version = "0.2.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/specta-rs/rspc"
documentation = "https://docs.rs/rspc-axum/latest/rspc-axum"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
ws = ["dep:tokio", "axum/ws"]

[dependencies]
rspc-core = { version = "0.0.0", path = "../core" }
axum = "0.7.9"
serde_json = "1.0.133"

# TODO: Drop these
rspc = { version = "0.3.1", path = "../.." }
form_urlencoded = "1.2.1"                       # TODO: use Axum's built in extractor
futures = "0.3.31"                              # TODO: No blocking execution, etc
tokio = { version = "1.41.1", optional = true } # TODO: No more `tokio::select` + spawning threads. Axum's Websocket upgrade handles that.
serde = { version = "1", features = ["derive"] } # TODO: Remove features
specta = { version = "=2.0.0-rc.20", features = [
    "derive",
    "serde",
    "serde_json",
] } # TODO: Drop all features
