[package]
name = "rspc-cache"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
moka = { version = "0.12.8", features = ["sync"] }
pin-project-lite = { workspace = true }
rspc = { path = "../../rspc" }

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
