[package]
name = "rspc-client"
description = "Rust client for rspc"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
# license = "MIT"
repository = "https://github.com/specta-rs/rspc"
documentation = "https://docs.rs/rspc-client"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]
publish = false # TODO: This is still very unstable

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
rspc-procedure = { version = "0.0.1", path = "../procedure" }
serde = { workspace = true, features = ["derive"] } # TODO: Drop derive feature?
serde_json = { workspace = true }
