[package]
name = "rspc-core"
version = "0.0.0"
edition = "2021"
publish = false    # TODO: Metadata

# TODO: Disable all features for each of them
[dependencies]
# Public
futures = "0.3.31" # TODO: Maybe `futures_core`?
serde = "1.0.215"

# Private
erased-serde = "0.4.5"
pin-project-lite = "0.2.15"

[dev-dependencies]
serde_json = "1.0.133"
