[package]
name = "rspc-core"
version = "0.0.0"
edition = "2021"
publish = false    # TODO: Metadata

# TODO: Disable all features for each of them
[dependencies]
# Public
futures-core = { version = "0.3.31", default-features = false }
serde = { version = "1.0.215", default-features = false }

# Private
erased-serde = { version = "0.4.5", default-features = false, features = [
    "std",
] }
pin-project-lite = { version = "0.2.15", default-features = false }

# TODO: Remove these
[dev-dependencies]
futures = "0.3.31"
serde_json = "1.0.133"
