[package]
name = "create-rspc-app"
description = "Get started with your next rspc app!"
version = "0.0.3"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/LICENCE", "/README.md", "/templates"]
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/create-rspc-app"
keywords = ["rspc", "prisma-client-rust", "pcr", "tauri", "axum"]
categories = ["web-programming", "asynchronous"]

[dependencies]
include_dir = "0.7.3"
requestty = "0.5.0"
strum = { version = "0.25.0", features = ["derive"] }
rustc_version = "0.4.0"
ureq = { version = "2.8.0", features = ["json"] }
serde_json = "1.0.107"
ctrlc = "3.4.1"
thiserror = "1.0.50"
walkdir = "2"

[dev-dependencies]
tempfile = "3.8.0"
cargo = "0.74.0"
tokio = { version = "1.33.0", features = ["full", "process"] }
futures = "0.3.28"
