[package]
name = "rspc-httpz"
version = "1.0.0-rc.5"
edition = "2021"

[features]
default = [] # TODO: Should this be the case?
# Webservers
axum = ["httpz/axum", "httpz/tokio-ws", "httpz/axum"]
# actix-web = ["httpz/actix-web"]
# poem = ["httpz/poem"]
# rocket = ["httpz/rocket"]
# warp = ["httpz/warp"]
# TODO: Following ones are exposed but not officially supported
lambda = ["httpz/lambda", "httpz/ws", "httpz/axum"]
workers = ["httpz/workers", "httpz/ws"]
vercel = ["httpz/vercel", "httpz/ws", "axum"]       # TODO: Shouldn't rely on Axum

[dependencies]
rspc-core = { version = "1.0.0-rc.5", path = "../core", default-features = false }
httpz = { version = "0.0.6", default-features = false, features = ["cookies"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
serde_json = "1.0.107"
futures = "0.3.28"

# TODO: Remove following
worker = { version = "0.0.17", default-features = false, optional = true } # TODO: update this package once httpz is updated
