[package]
name = "rspc-httpz-interop"
description = "Interop between rspc and the deprecated httpz crate"
version = "0.0.1"
edition = "2021"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs2" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs2",
] # TODO: Rename to `docsrs` once Tokio fixes https://github.com/tokio-rs/tokio/pull/6360

# TODO: Cleanup deps
[dependencies]
rspc = { version = "0.2.0", path = "../../" }
specta = { version = "1.0.5", features = ["serde", "typescript"] }
httpz = { version = "0.0.6", features = ["axum", "tokio-ws", "cookies"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
axum = { version = "0.7.9" }
