[package]
name = "rspc-legacy"
description = "The rspc 0.3 syntax implemented on top of the 0.4 core"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/LICENCE", "/README.md"]
repository = "https://github.com/specta-rs/rspc"
documentation = "https://docs.rs/rspc-legacy/latest/rspc-legacy"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
# Warnings for deprecations
deprecated = []

[dependencies]
rspc-procedure = { version = "0.0.1", path = "../procedure" }
serde = { workspace = true }
futures = { workspace = true }
specta = { workspace = true, features = [
    "serde",
    "serde_json",
    "derive", # TODO: remove this
] }
specta-typescript = { workspace = true, features = [] }
serde_json = { workspace = true }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "sync", "rt"] }

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
