[package]
name = "normi"
description = "A normalised caching layer for rspc."
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/rspc/tree/main/crates/normi"
readme = "README.md"
documentation = "https://docs.rs/normi"
keywords = ["async", "rspc", "normalised-cache", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[features]
default = ["rspc"]
rspc = ["dep:rspc"]

[dependencies]
rspc = { path = "../../", optional = true }
normi-macros = { path = "./macros" }
serde = "1.0.152"
serde_json = "1.0.91"
specta = { version = "0.0.6", path = "../specta" }

[dev-dependencies]
rspc = { path = "../../", features = ["axum"] }
axum = "0.6.1"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", default-features = false, features = [
  "cors",
] }
trybuild = "1.0.74"
assert-json-diff = "2.0.2"
