[package]
name = "rspc2"
version = "0.2.0"
edition = "2021"

[dependencies]
# Public
serde = { version = "1", default-features = false }
specta = { version = "1", default-features = false }

# Private
erased-serde = { version = "0.4.2", default-features = false, features = ["std"] }
serde-value = "0.7.0"

# Temporary
serde_json = "1"
tokio = "1"
futures = "0.3.30"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
