[package]
name = "specta"
description = "Easily export your Rust types to other languages"
version = "0.0.4"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
include = ["/src", "/examples", "/LICENCE", "/README.md"]
repository = "https://github.com/oscartbeaumont/rspc/tree/main/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[features]
default = ["serde"]
serde = ["specta-macros/serde", "dep:serde_json"]
openapi = ["dep:openapiv3"]

# External types
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
time = ["dep:time"]
bigdecimal = ["dep:bigdecimal"]
rust_decimal = ["dep:rust_decimal"]
indexmap = ["dep:indexmap"]
ipnetwork = ["dep:ipnetwork"]
mac_address = ["dep:mac_address"]
bit-vec = ["dep:bit-vec"]
bson = ["dep:bson"]

[dependencies]
specta-macros = { version = "0.0.4", path = "./macros" }
serde_json = { version = "1.0.85", optional = true, default-features = false, features = [] }
uuid = { version = "1.1.2", optional = true, default-features = false, features = [] }
chrono = { version = "0.4.22", optional = true, default-features = false, features = [] }
time = { version = "0.3.14", optional = true, default-features = false, features = [] }
bigdecimal = { version = "0.3.0", optional = true, default-features = false, features = [] }
rust_decimal = { version = "1.26.1", optional = true, default-features = false, features = [] }
indexmap = { version = "1.9.1", optional = true, default-features = false, features = [] }
ipnetwork = { version = "0.20.0", optional = true, default-features = false, features = [] }
mac_address = { version = "1.1.4", optional = true, default-features = false, features = [] }
bit-vec = { version = "0.6.3", optional = true, default-features = false, features = [] }
bson = { version = "2.4.0", optional = true, default-features = false, features = [] }
openapiv3 = { version = "1.0.1", optional = true, default-features = false, features = [] }

[dev-dependencies]
serde = { version = "1.0.145", features = ["derive"] }
